add some new docs. Getting started, new hardware

--- a/i18n/zh/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh/docusaurus-plugin-content-docs/current.json
@@ -1,1 +1,22 @@
-{}
+{
+    "sidebar.docs.category.About TuyaOpen": {
+        "message": "关于 TuyaOpen",
+        "description": "The label for category About TuyaOpen in sidebar docs"
+    },
+    "sidebar.docs.category.Getting Started": {
+        "message": "快速开始",
+        "description": "The label for category Quick Start in sidebar docs"
+    },
+    "sidebar.docs.category.Environment Setup": {
+        "message": "环境设置",
+        "description": "The label for category Environment Setup in sidebar docs"
+    },
+    "sidebar.docs.category.Other Tools": {
+        "message": "其他工具",
+        "description": "The label for category Other Tools in sidebar docs"
+    },
+    "sidebar.docs.category.New Hardware Support": {
+        "message": "添加新硬件",
+        "description": "The label for category Other Tools in sidebar docs"
+    }
+}
