--- a/i18n/zh/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh/docusaurus-plugin-content-docs/current.json
@@ -46,5 +46,9 @@
     "sidebar.docs.category.faqs": {
         "message": "常见问题",
         "description": "The label for category FAQ in sidebar docs"
+    },
+    "sidebar.docs.category.Docs Templates": {
+        "message": "文档模板",
+        "description": "The label for category Docs Templates in sidebar docs"
     }
 }
