doc: add peripherals dictory (#19)

--- a/i18n/zh/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh/docusaurus-plugin-content-docs/current.json
@@ -27,6 +27,10 @@
         "message": "AI 应用组件",
         "description": "The label for category AI Components in sidebar docs"
     },
+    "sidebar.docs.category.Peripherals": {
+        "message": "外设驱动",
+        "description": "The label for category Peripherals in sidebar docs"
+    },
     "sidebar.docs.category.TKL APIs": {
         "message": "TKL APIs",
         "description": "The label for category TKL APIs in sidebar docs"
