add pricing structure

--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -11,6 +11,10 @@
     "message": "文档",
     "description": "Navbar item with label Documentation"
   },
+  "item.label.Pricing": {
+    "message": "价格",
+    "description": "Navbar item with label "
+  },
   "item.label.Blog": {
     "message": "博客",
     "description": "Navbar item with label Blog"
