--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -19,6 +19,10 @@
     "message": "博客",
     "description": "Navbar item with label Blog"
   },
+  "item.label.tools": {
+    "message": "工具",
+    "description": "Navbar item with label Tools"
+  },
   "item.label.Supported Hardware": {
     "message": "硬件支持",
     "description": "Navbar item with label Blog"
