--- a/i18n/zh/docusaurus-theme-classic/footer.json
+++ b/i18n/zh/docusaurus-theme-classic/footer.json
@@ -11,6 +11,10 @@
     "message": "文档",
     "description": "The title of the footer links column with title=Docs in the footer"
   },
+  "link.title.Tools": {
+    "message": "工具",
+    "description": "The title of the footer links column with title=Tools in the footer"
+  },
   "link.title.More": {
     "message": "更多",
     "description": "The title of the footer links column with title=More in the footer"
@@ -62,5 +66,21 @@
   "copyright": {
     "message": "\n        <p style=\"font-weight: 500;\">版权所有 © TuyaOpen Authors 2025 | Documentation Distributed under Apache License Version 2.0</p>\n",
     "description": "The footer copyright"
+  },
+  "link.item.label.Service": {
+    "message": "服务",
+    "description": "Navbar item with label Service"
+  },
+  "link.item.label.Hardware List": {
+    "message": "硬件支持清单",
+    "description": "Navbar item with Hardware List"
+  },
+  "link.item.label.Tuya T5AI Dev Kit": {
+    "message": "Tuya T5AI 开发套件",
+    "description": "Navbar item with label Tuya T5AI Dev Kit"
+  },
+  "link.item.label.Web Serial Tool": {
+    "message": "Web Serial 工具",
+    "description": "Navbar item with label Web Serial Tool"
   }
 }
