--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -19,7 +19,7 @@
     "message": "博客",
     "description": "Navbar item with label Blog"
   },
-  "item.label.tools": {
+  "item.label.Tools": {
     "message": "工具",
     "description": "Navbar item with label Tools"
   },
@@ -38,5 +38,13 @@
   "announcement.learnMore": {
     "message": "了解更多 →",
     "description": "Learn more link text"
+  },
+  "item.label.Universal Serial Port Tools": {
+    "message": "涂鸦通用串口工具",
+    "description": "Navbar item with label Universal Serial Port Tools"
+  },
+  "item.label.Web Serial/Flashing Tools": {
+    "message": "Web串口/烧录工具",
+    "description": "Navbar item with label Web Serial/Flashing Tools"
   }
 }
